--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             border: 0; /* For IE */
             /* Aspect ratio of image, gives initial dimension to prevent text moving down once image is loaded */
             /* When changing logo, change this also */
-            aspect-ratio: 125 / 50;
+            aspect-ratio: 125 / 23.4;
         }
         #main {
             vertical-align: middle;
@@ -34,14 +34,17 @@
         #progress {
             width: 45%; /* Bar width */
             margin: 0 auto;
-            border-radius: 10px; /* Roundness */
-            background-color: #a8a8a8; /* Background colour */
-            padding: 7px 5px;
+			border: 1px;
+			border-color: #000;
+			border-style: groove;
+            border-radius: 25px; /* Roundness */
+            background-color: #fff; /* Background colour */
+            padding: 7px 7px;
             /* border: 5px solid #a8a8a8; Border */
         }
         #fill {
             padding: 2px 0;
-            background-color: #00b98b; /* Fill colour */
+            background-color: #1e1e1e; /* Fill colour */
             width: 35%; /* Bar percentage, change text below also */
             border-radius: 25px; /* Roundness */
             animation: proanimate 2s;
@@ -83,9 +86,8 @@
 <body>
     <div id="main">
         <img src="logo.png" alt="Logo Image">
-        <h1>Company Name</h1>
         <h2>Our website is currently under construction. </h2>
-        <div id="progress"><div id="fill"><div id="barpercent"><h3>35%</h3></div></div></div>
+        <div id="progress"><div id="fill"><div id="barpercent"><h3>20%</h3></div></div></div>
     </div>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </body>
